[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powerview"
version = "2025.0.7"
description = "Python based PowerView script"
authors = [
    { name = "Aniq Fakhrul", email = "aniqfakhrull@gmail.com" }
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "impacket",
    "ldap3-bleeding-edge",
    "dnspython",
    "future",
    "gnureadline",
    "validators",
    "dsinternals",
    "chardet",
    "tabulate",
    "argparse",
    "requests_ntlm",
    "python-dateutil",
    "flask",
    "flask-basicauth",
    "mcp[cli]"
]

[project.optional-dependencies]
mcp = [
    "mcp[cli]",
]

[project.urls]
homepage = 'https://github.com/aniqfakhrul/powerview.py'
repository = 'https://github.com/aniqfakhrul/powerview.py'

[project.scripts]
powerview = "powerview:main"