[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powerview"
version = "2025.1.6"
description = "Python based PowerView script"
authors = [
    { name = "Aniq Fakhrul", email = "aniqfakhrull@gmail.com" }
]
readme = "README.md"
license = "MIT"
classifiers = [
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ldap3-bleeding-edge",
    "impacket",
    "dnspython",
    "future",
    "gnureadline",
    "validators",
    "dsinternals",
    "chardet",
    "tabulate",
    "argparse",
    "requests_ntlm",
    "python-dateutil",
    "flask",
    "flask-basicauth",
    "pycryptodome",
    "fastmcp"
]

[project.optional-dependencies]
mcp = [
    "fastmcp",
]

[project.urls]
homepage = 'https://github.com/aniqfakhrul/powerview.py'
repository = 'https://github.com/aniqfakhrul/powerview.py'

[project.scripts]
powerview = "powerview:main"

[tool.setuptools]
include-package-data = true